err/ur-cb2.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/ur_cb2'...
Compiling './lib/python3.5/site-packages/ur_cb2/cb2_move_to_points.py'...
***   File "./lib/python3.5/site-packages/ur_cb2/cb2_move_to_points.py", line 59
    print 'read in {} points, written at: {}'.format(len(points.keys()),
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ur_cb2/cb2_robot_example.py'...
***   File "./lib/python3.5/site-packages/ur_cb2/cb2_robot_example.py", line 64
    print 'complete loop 1'
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ur_cb2/receive'...
Compiling './lib/python3.5/site-packages/ur_cb2/receive/cb2_receive.py'...
***   File "./lib/python3.5/site-packages/ur_cb2/receive/cb2_receive.py", line 155
    print "\033[2J"  # Clear screen
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ur_cb2/receive/cb2_store_points.py'...
***   File "./lib/python3.5/site-packages/ur_cb2/receive/cb2_store_points.py", line 62
    print "Able to access file, closing it now until we are ready for it."
                                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ur_cb2/send'...
Compiling './lib/python3.5/site-packages/ur_cb2/send/cb2_send.py'...
***   File "./lib/python3.5/site-packages/ur_cb2/send/cb2_send.py", line 194
    print 'Sent: {} commands'.format(self.sent)
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ur_cb2-0.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
